objects/IDMSUserInvitation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IDMSUserInvitations</relationshipLabel>
        <relationshipName>IDMSUserInvitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AppName__c</fullName>
        <label>AppName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federation_Id__c</fullName>
        <label>Federation Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invitation_Code__c</fullName>
        <externalId>true</externalId>
        <label>Invitation Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IDMSUserInvitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IDMSUserInvitation</label>
    <nameField>
        <label>UserInvitation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDMSUserInvitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>